--- a/sidebars/index.html
+++ b/sidebars/index.html
@@ -242,46 +242,33 @@
             <li class="nav-item">
               <a href="#" class="nav-link active" aria-current="page">
                 <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
-                Home
+                Inicio
               </a>
             </li>
             <li>
               <a href="#" class="nav-link text-white">
                 <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
-                Dashboard
+                Minhas Consultas
               </a>
             </li>
             <li>
               <a href="#" class="nav-link text-white">
                 <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
-                Orders
-              </a>
-            </li>
-            <li>
-              <a href="#" class="nav-link text-white">
-                <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
-                Products
-              </a>
-            </li>
-            <li>
-              <a href="#" class="nav-link text-white">
-                <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
-                Customers
+                Meu Perfil
               </a>
             </li>
           </ul>
           <hr>
           <div class="dropdown">
             <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-              <strong>mdo</strong>
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWvRLMRrytsgoMFgdol3M-vrSgGU-X0vcZKw&s" alt="" width="32" height="32" class="rounded-circle me-2">
+              <strong>*nome do usuario*</strong>
             </a>
             <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-              <li><a class="dropdown-item" href="#">New project...</a></li>
-              <li><a class="dropdown-item" href="#">Settings</a></li>
-              <li><a class="dropdown-item" href="#">Profile</a></li>
+              <li><a class="dropdown-item" href="#">Minha conta</a></li>
+              <li><a class="dropdown-item" href="#">Alterar E-mail ou Senha</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Sign out</a></li>
+              <li><a class="dropdown-item" href="#">Sair</a></li>
             </ul>
           </div>
         </div>
