--- a/carousel/index.html
+++ b/carousel/index.html
@@ -131,7 +131,7 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://www.idealconsulta.com.br/site/images/icone-dentista.png" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://cdn-icons-png.flaticon.com/512/1957/1957362.png" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
         <h2 class="fw-normal">Clínico Geral</h2>
         <p>São realizados os tratamentos mais simples, como consultas preventivas, limpezas, remoção de tártaro, entre outros procedimentos.</p>
       </div><!-- /.col-lg-4 -->
